--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -77,7 +77,7 @@
   .dropdown {
     width: 80px;
     height: auto;
-    padding: 0.4rem 1rem;
+    padding: 0.5rem 1rem 0.5rem;
     background-color: rgb(255, 255, 255);
     position: absolute;
     right: 0rem;
@@ -102,11 +102,11 @@
       align-items: center;
       justify-content: center;
       gap: 0 0.4rem;
-      padding: 0.1rem 0;
-      margin: 0.1rem 0 0.3rem;
+      padding: 0.05rem 0;
+      margin: 0.11rem 0 0.3rem;
       font-weight: 400;
-      font-size: 0.92rem;
-
+      font-size: 0.9rem;
+      font-family: "Quicksand", sans-serif;
       cursor: pointer;
       text-align: center;
       letter-spacing: 0.3px;
