--- a/src/pages/Create/create.styles.scss
+++ b/src/pages/Create/create.styles.scss
@@ -2,20 +2,39 @@
 
 @mixin button {
   font-family: "Poppins", sans-serif;
-  padding: 0.35rem 1.2rem 0.45rem;
+  padding: 0.3rem 1.2rem 0.4rem;
 
-  border: 2px solid rgba(0, 0, 0, 0);
-  background-color: #4dbc92;
-  color: white;
+  border: 2px solid rgb(0, 0, 0);
+  background-color: #00000000;
+  color: rgb(0, 0, 0);
   font-weight: 500;
   font-size: 0.9rem;
   letter-spacing: 0.6px;
+  border-radius: 4px;
   transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4dbc92;
+    content: "";
+    z-index: -1;
+
+    top: 100%;
+    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+  }
   &:hover {
     border: 2px solid rgba(0, 0, 0, 0.603);
     background: transparent;
-    color: black;
+    color: rgb(255, 255, 255);
+  }
+  &:hover::before {
+    top: 0;
   }
   &:active {
     transform: scale(0.85);
@@ -42,7 +61,7 @@
   .progress {
     width: 15rem;
     position: relative;
-    bottom: 15%;
+    bottom: 20%;
     height: 0.3rem;
     p {
       font-weight: 500;
@@ -51,10 +70,10 @@
       margin-bottom: 1.25rem;
     }
     .progress-span {
-      display: block;
+      display: none;
       height: 100%;
       border-radius: 20px;
-      width: 0;
+      width: 1%;
       background-color: #4dbc92;
       transition: all 0.5s ease-in-out;
     }
@@ -126,8 +145,8 @@
       font-size: 1.05rem;
       font-weight: 400;
 
-      color: #4dbc92;
-      letter-spacing: 0.6px;
+      color: #00000077;
+      letter-spacing: 0.5px;
     }
     input,
     textarea {
@@ -143,6 +162,7 @@
       font-size: 0.95rem;
       font-weight: 400;
       border-radius: 4px;
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.02);
       &::placeholder {
         font-size: 0.9rem;
         opacity: 1;
@@ -170,7 +190,7 @@
       outline: 0;
       font-weight: 400;
       font-size: 0.9rem;
-
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.02);
       &:focus {
         border: 2px solid rgb(53, 226, 53);
       }
@@ -206,8 +226,9 @@
       color: rgb(92, 91, 91) !important;
     }
     label {
-      background-color: #4dbc92;
-      color: rgb(255, 255, 255);
+      background-color: #18181800;
+
+      color: rgb(0, 0, 0);
       font-weight: 500;
       width: 8rem;
       font-size: 0.85rem;
@@ -216,16 +237,39 @@
       display: inline-block;
       margin-bottom: 0;
       text-align: center;
-      border: 2px solid rgba(0, 0, 0, 0);
+      border: 2px solid rgb(0, 0, 0);
       cursor: pointer;
+      border-radius: 4px;
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.034);
+      position: relative;
+      overflow: hidden;
+      &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #4dbc92;
+        content: "";
+        z-index: -1;
+
+        top: 100%;
+        transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+      }
+      &:hover::before {
+        top: 0;
+      }
+      &:hover {
+        color: white;
+      }
       &:focus {
-        color: black;
+        color: rgb(255, 255, 255);
 
         background: transparent;
         border: 2px solid rgba(0, 0, 0, 0.623);
       }
       &:active {
-        color: black;
+        color: rgb(255, 255, 255);
 
         background: transparent;
         border: 2px solid rgba(0, 0, 0, 0.623);
@@ -248,6 +292,7 @@
       object-fit: cover;
       transition: all 0.5s ease-in-out;
       animation: image-animate 2s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+      filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.137));
     }
     .error-img {
       width: 50%;
@@ -363,7 +408,7 @@
       width: 95%;
       margin-top: 2rem;
       padding-bottom: 6%;
-      height: 180px;
+      height: 250px;
       background-color: rgba(0, 0, 0, 0);
       img {
         width: 100%;
@@ -376,6 +421,9 @@
   }
 }
 @media screen and (max-width: 550px) {
+  .create-form {
+    width: 89%;
+  }
   .create-contents {
     width: 100%;
     height: auto;
@@ -390,5 +438,12 @@
   }
   .create-right-container {
     width: 100%;
+    margin-right: 10px;
+    .uploaded-img {
+      height: 180px;
+      border-radius: 10px;
+      right: 0;
+      left: 0;
+    }
   }
 }
