--- a/src/pages/Item/item.styles.scss
+++ b/src/pages/Item/item.styles.scss
@@ -38,8 +38,29 @@
     font-weight: 400;
     font-size: 0.85rem;
     color: white;
-    background-color: #92929283;
+    background-color: #49494983;
     padding: 0.25rem 0.35rem;
+  }
+  .item-download {
+    position: absolute;
+    bottom: 0.4rem;
+    right: 0.3rem;
+    z-index: 50;
+    background-color: #49494983;
+    padding: 0.3rem;
+    border-radius: 50%;
+  }
+  .item-download-icon {
+    display: block;
+    font-size: 1.1rem;
+    color: #ffffffab;
+    cursor: pointer;
+    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+
+    &:hover {
+      color: #ffffff;
+      transform: scale(1.05);
+    }
   }
 }
 .item-post-details {
@@ -126,19 +147,24 @@
         transform: scale(1.05);
       }
     }
+    .edit-icon-div {
+      a {
+        text-decoration: none;
+        color: black;
+        .item-edit-icon {
+          font-size: 1.1rem;
+          padding: 0.4rem;
 
-    .item-download-icon {
-      display: block;
-      z-index: 50;
-      font-size: 1.2rem;
-      color: rgba(0, 0, 0, 0.719);
-      cursor: pointer;
-      transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-      position: relative;
-      bottom: 0.2rem;
-      &:hover {
-        color: #34f199;
-        transform: scale(1.05);
+          cursor: pointer;
+          color: #000000a1;
+          &:active {
+            animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
+          }
+          &:hover {
+            color: #06a55b;
+            transform: scale(1.05);
+          }
+        }
       }
     }
     .item-fav {
