--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -29,9 +29,14 @@
   align-items: center;
   flex-direction: column;
   .sfield-np {
-    font-weight: 500;
+    font-weight: 600;
     margin-top: 0;
-    font-size: 1.1rem;
+    margin-bottom: 0.45rem;
+    font-size: 1.15rem;
+  }
+  span {
+    font-weight: 500;
+    margin: 0.25rem 0;
   }
 }
 .sfield-post-box,
