--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -61,6 +61,9 @@
       margin-bottom: 0.9rem;
       font-weight: 600;
       text-transform: capitalize;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
       a {
         text-decoration: none;
         color: inherit;
